# DSPcpp

./: CMakeLists.txt  LICENSE
DSP/: CMakeLists.txt
DSP/include/DSP/: dsp_types.h
DSP/include/DSP/Discrete/: Signal.hpp  pidController.hpp  zStateObserver.hpp  zStateSpace.hpp
DSP/include/DSP/Math/: Matrix.hpp  Polynomial.hpp  Vector.hpp
DSP/src/: CMakeLists.txt  Matrix.cpp  Polynomial.cpp  Signal.cpp  Vector.cpp  pidController.cpp  zStateObserver.cpp  zStateSpace.cpp
examples/: CMakeLists.txt  ckeck_results.m  test.cpp
